<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >
            
            <Spinner
		        android:id="@+id/player1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
            <Spinner
		        android:id="@+id/character1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
            
            <LinearLayout
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal"
            	android:visibility="gone">
            	<LinearLayout
                	android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:orientation="vertical"
            		android:paddingRight="8dp"
            		android:paddingLeft="8dp"
            		android:layout_weight="3">

            	    <TextView
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:text="@string/Stocks" />
            		<SeekBar
            		    android:id="@+id/topCharacterStocks"
            		    android:layout_width="match_parent"
            		    android:layout_height="wrap_content"/>
            		
            	</LinearLayout>
            	
            	<LinearLayout
                	android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:paddingRight="8dp"
            		android:paddingLeft="8dp"
            		android:orientation="vertical"
            		android:layout_weight="3">

            	    <TextView
		        		android:layout_width="wrap_content"
		        		android:layout_height="wrap_content"
		        		android:text="@string/Willpower" />
            		<SeekBar
            		    android:id="@+id/topCharacterWillpower"
            		    android:layout_width="match_parent"
            		    android:layout_height="wrap_content"/>
            		
            	</LinearLayout>
            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >
            
            <Spinner
		        android:id="@+id/player2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
            
            <Spinner
		        android:id="@+id/character2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
            </LinearLayout>
            
    </LinearLayout>
    
    <Button
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/fight" />
</RelativeLayout>